--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
-  background-color: theme-color("twitch-purple");
+  background-color: $twitch-purple;
   min-height: 3rem;
   padding: 1rem 0;
+  font-size: 12px;
 }
 
 body.dark-mode .blockquote-footer {
-  color: darken(theme-color("ice"), 10%);
+  color: darken($ice, 10%);
 }
